--- a/ss.ipynb
+++ b/ss.ipynb
@@ -252,11 +252,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "293f4322",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "df = pd.read_csv(\"vdr_structures_enhanced.csv\")\n",
+    "\n",
+    "df.head()\n",
+    "\n",
+    "df['mean_bfactor'].isna().sum()"
+   ]
   }
  ],
  "metadata": {
