--- a/ss.ipynb
+++ b/ss.ipynb
@@ -275,6 +275,448 @@
     "\n",
     "df['mean_bfactor'].isna().sum()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ead705dc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "191d0ff7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[22.0,\n",
+       " 85.23,\n",
+       " 57.68,\n",
+       " 64.93,\n",
+       " 49.01,\n",
+       " 74.01,\n",
+       " 17.08,\n",
+       " 17.93,\n",
+       " 112.22,\n",
+       " 49.39,\n",
+       " 92.65,\n",
+       " 90.7,\n",
+       " 98.61,\n",
+       " 81.4,\n",
+       " 79.27,\n",
+       " 83.17,\n",
+       " 78.23,\n",
+       " nan,\n",
+       " 23.45,\n",
+       " 22.91,\n",
+       " 59.31,\n",
+       " 62.21,\n",
+       " 52.88,\n",
+       " 49.07,\n",
+       " 24.36,\n",
+       " 26.29,\n",
+       " nan,\n",
+       " nan,\n",
+       " nan,\n",
+       " nan,\n",
+       " nan,\n",
+       " nan,\n",
+       " nan,\n",
+       " 98.75,\n",
+       " 53.51,\n",
+       " 38.66,\n",
+       " 23.83,\n",
+       " 19.12,\n",
+       " 17.37,\n",
+       " 21.02,\n",
+       " 20.02,\n",
+       " 19.14,\n",
+       " 27.66,\n",
+       " 26.79,\n",
+       " 20.59,\n",
+       " 25.49,\n",
+       " 26.25,\n",
+       " 27.34,\n",
+       " 24.98,\n",
+       " 20.31,\n",
+       " 20.44,\n",
+       " 21.71,\n",
+       " 42.81,\n",
+       " 34.59,\n",
+       " 15.75,\n",
+       " 31.98,\n",
+       " 26.24,\n",
+       " 26.0,\n",
+       " 59.7,\n",
+       " 66.57,\n",
+       " 20.84,\n",
+       " 23.2,\n",
+       " 27.74,\n",
+       " 25.88,\n",
+       " 29.66,\n",
+       " 49.0,\n",
+       " 31.55,\n",
+       " 18.86,\n",
+       " 53.08,\n",
+       " 21.09,\n",
+       " 27.84,\n",
+       " 43.55,\n",
+       " 67.08,\n",
+       " 103.93,\n",
+       " 76.01,\n",
+       " 36.3,\n",
+       " 61.99,\n",
+       " 52.05,\n",
+       " 66.19,\n",
+       " 72.88,\n",
+       " 60.53,\n",
+       " 63.16,\n",
+       " 56.97,\n",
+       " 62.47,\n",
+       " nan,\n",
+       " 42.06,\n",
+       " nan,\n",
+       " nan,\n",
+       " 93.69,\n",
+       " 82.88,\n",
+       " 67.14,\n",
+       " 63.15,\n",
+       " nan,\n",
+       " nan,\n",
+       " 43.11,\n",
+       " 39.77,\n",
+       " 39.96,\n",
+       " 40.03,\n",
+       " 52.72,\n",
+       " 47.92,\n",
+       " 33.32,\n",
+       " 34.52,\n",
+       " 18.7,\n",
+       " 20.57,\n",
+       " 16.29,\n",
+       " 16.58,\n",
+       " 27.53,\n",
+       " 41.22,\n",
+       " 32.7,\n",
+       " 24.7,\n",
+       " 16.84,\n",
+       " 12.57,\n",
+       " 15.7,\n",
+       " 48.81,\n",
+       " 66.16,\n",
+       " 53.64,\n",
+       " 55.97,\n",
+       " 61.68,\n",
+       " nan,\n",
+       " 50.0,\n",
+       " 56.23,\n",
+       " 81.29,\n",
+       " 65.88,\n",
+       " 94.18,\n",
+       " 79.86,\n",
+       " 73.27,\n",
+       " 74.81,\n",
+       " 61.3,\n",
+       " 86.51,\n",
+       " 39.87,\n",
+       " 35.65,\n",
+       " 36.62,\n",
+       " 42.34,\n",
+       " 42.6,\n",
+       " 52.49,\n",
+       " 17.29,\n",
+       " 49.38,\n",
+       " 41.28,\n",
+       " 54.31,\n",
+       " 47.8,\n",
+       " 42.08,\n",
+       " 88.82,\n",
+       " 37.92,\n",
+       " 24.99,\n",
+       " 60.99,\n",
+       " 56.88,\n",
+       " 45.11,\n",
+       " 31.53,\n",
+       " 28.6,\n",
+       " 63.16,\n",
+       " 32.12,\n",
+       " 61.68,\n",
+       " 26.41,\n",
+       " 26.77,\n",
+       " 37.71,\n",
+       " 83.01,\n",
+       " 88.68,\n",
+       " 41.16,\n",
+       " 36.06,\n",
+       " 42.0,\n",
+       " 38.5,\n",
+       " 33.2,\n",
+       " 15.37,\n",
+       " 27.23,\n",
+       " 78.2,\n",
+       " 38.9,\n",
+       " 36.61,\n",
+       " 51.64,\n",
+       " 27.19,\n",
+       " 42.34,\n",
+       " 24.2,\n",
+       " 44.69,\n",
+       " 38.49,\n",
+       " 38.54,\n",
+       " 43.53,\n",
+       " 50.56,\n",
+       " 43.04,\n",
+       " 48.59,\n",
+       " 42.91,\n",
+       " 59.28,\n",
+       " 62.14,\n",
+       " 30.9,\n",
+       " 34.7,\n",
+       " 30.88,\n",
+       " 29.62,\n",
+       " 42.94,\n",
+       " 44.13,\n",
+       " 40.52,\n",
+       " 43.21,\n",
+       " 51.63,\n",
+       " 49.67,\n",
+       " 29.05,\n",
+       " 36.38,\n",
+       " 13.77,\n",
+       " 36.29]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "df1 = pd.read_csv(\"vdr_structures_enhanced.csv\")\n",
+    "df2 = pd.read_csv(\"vdr_structures_enhanced_D.csv\")\n",
+    "\n",
+    "df1['mean_bfactor'].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "55f8fdbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[21.54,\n",
+       " 85.93,\n",
+       " 57.55,\n",
+       " 64.92,\n",
+       " 48.89,\n",
+       " 73.76,\n",
+       " 15.89,\n",
+       " 16.69,\n",
+       " 112.57,\n",
+       " 49.17,\n",
+       " 93.01,\n",
+       " 90.76,\n",
+       " 99.19,\n",
+       " 81.63,\n",
+       " 79.46,\n",
+       " 83.33,\n",
+       " 78.36,\n",
+       " nan,\n",
+       " 23.05,\n",
+       " 21.79,\n",
+       " 59.24,\n",
+       " 62.23,\n",
+       " 52.69,\n",
+       " 49.02,\n",
+       " 23.44,\n",
+       " 25.75,\n",
+       " nan,\n",
+       " nan,\n",
+       " nan,\n",
+       " nan,\n",
+       " nan,\n",
+       " nan,\n",
+       " nan,\n",
+       " 99.03,\n",
+       " 53.79,\n",
+       " 38.31,\n",
+       " 23.29,\n",
+       " 18.33,\n",
+       " 16.65,\n",
+       " 19.16,\n",
+       " 20.14,\n",
+       " 18.95,\n",
+       " 27.46,\n",
+       " 26.41,\n",
+       " 19.93,\n",
+       " 24.68,\n",
+       " 25.53,\n",
+       " 26.76,\n",
+       " 24.28,\n",
+       " 19.88,\n",
+       " 20.59,\n",
+       " 21.91,\n",
+       " 42.93,\n",
+       " 34.61,\n",
+       " 15.92,\n",
+       " 30.57,\n",
+       " 24.73,\n",
+       " 25.33,\n",
+       " 60.12,\n",
+       " 66.83,\n",
+       " 19.25,\n",
+       " 23.21,\n",
+       " 26.33,\n",
+       " 24.74,\n",
+       " 28.01,\n",
+       " 49.0,\n",
+       " 31.72,\n",
+       " 18.91,\n",
+       " 53.04,\n",
+       " 21.23,\n",
+       " 28.07,\n",
+       " 43.42,\n",
+       " 67.39,\n",
+       " 104.61,\n",
+       " 76.49,\n",
+       " 36.62,\n",
+       " 62.11,\n",
+       " 52.2,\n",
+       " 66.31,\n",
+       " 73.11,\n",
+       " 60.85,\n",
+       " 63.47,\n",
+       " 56.57,\n",
+       " 62.65,\n",
+       " nan,\n",
+       " 41.15,\n",
+       " nan,\n",
+       " nan,\n",
+       " 94.24,\n",
+       " 83.02,\n",
+       " 67.46,\n",
+       " 63.39,\n",
+       " nan,\n",
+       " nan,\n",
+       " 42.28,\n",
+       " 38.91,\n",
+       " 39.96,\n",
+       " 39.9,\n",
+       " 52.9,\n",
+       " 48.19,\n",
+       " 33.28,\n",
+       " 34.64,\n",
+       " 15.67,\n",
+       " 20.01,\n",
+       " 13.68,\n",
+       " 14.08,\n",
+       " 25.06,\n",
+       " 41.34,\n",
+       " 32.05,\n",
+       " 23.64,\n",
+       " 15.67,\n",
+       " 9.23,\n",
+       " 13.04,\n",
+       " 49.0,\n",
+       " 66.6,\n",
+       " 53.86,\n",
+       " 56.23,\n",
+       " 61.94,\n",
+       " nan,\n",
+       " 49.81,\n",
+       " 56.12,\n",
+       " 81.56,\n",
+       " 66.31,\n",
+       " 94.53,\n",
+       " 80.33,\n",
+       " 73.52,\n",
+       " 74.9,\n",
+       " 61.4,\n",
+       " 86.68,\n",
+       " 40.07,\n",
+       " 35.37,\n",
+       " 36.84,\n",
+       " 42.59,\n",
+       " 42.74,\n",
+       " 52.8,\n",
+       " 15.78,\n",
+       " 49.74,\n",
+       " 41.53,\n",
+       " 54.61,\n",
+       " 48.2,\n",
+       " 42.28,\n",
+       " 89.57,\n",
+       " 37.6,\n",
+       " 24.46,\n",
+       " 61.16,\n",
+       " 57.07,\n",
+       " 44.93,\n",
+       " 31.64,\n",
+       " 27.97,\n",
+       " 63.36,\n",
+       " 31.17,\n",
+       " 61.62,\n",
+       " 25.28,\n",
+       " 26.08,\n",
+       " 37.86,\n",
+       " 83.37,\n",
+       " 89.07,\n",
+       " 41.27,\n",
+       " 36.02,\n",
+       " 42.03,\n",
+       " 38.48,\n",
+       " 33.13,\n",
+       " 15.36,\n",
+       " 27.43,\n",
+       " 78.27,\n",
+       " 37.67,\n",
+       " 36.25,\n",
+       " 51.21,\n",
+       " 26.52,\n",
+       " 41.98,\n",
+       " 23.4,\n",
+       " 44.66,\n",
+       " 38.17,\n",
+       " 38.47,\n",
+       " 43.63,\n",
+       " 50.64,\n",
+       " 43.23,\n",
+       " 48.83,\n",
+       " 43.11,\n",
+       " 59.61,\n",
+       " 62.46,\n",
+       " 30.52,\n",
+       " 34.56,\n",
+       " 30.46,\n",
+       " 29.61,\n",
+       " 43.03,\n",
+       " 44.22,\n",
+       " 40.35,\n",
+       " 43.19,\n",
+       " 51.82,\n",
+       " 49.88,\n",
+       " 28.14,\n",
+       " 36.37,\n",
+       " 13.26,\n",
+       " 36.42]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2[\"mean_bfactor\"].tolist()"
+   ]
   }
  ],
  "metadata": {
